sema/testdata/gcc-c99-extra/reject/ucnid-7.c
void *p = &\u00e9;
void *q = &\u1e00;
